--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-*.class
-
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -62,4 +60,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 *.iml
-*.xml
+.idea/
+out/
